2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in:               replace the ancient build system
	* README.cygwin:             with TEA 2002 build spec.
	* aclocal.m4:
	* config.guess (removed):
	* config.sub (removed):
	* configure:
	* configure.in:
	* install-sh (removed):
	* mkIndex.tcl.in (removed):
	* mkinstalldirs (removed):
	* tcl.m4 (removed):
	* tclconfig/README.txt (new):
	* tclconfig/install-sh (new):
	* tclconfig/tcl.m4 (new):
	* generic/vfs.c: changed BUILD_Vfs to BUILD_vfs

2002-07-18  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: ensure all mount activity is with fully
	normalized paths in which the last path element is not a link.
	Solves (together with latest cvs head changes) a problem in
	starting up a tclkit(sh) from a link.
	
2002-07-08  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: update for latest cvs head.
	* win/makefile.vc: compilation into Release and Debug
	directories as appropriate.
	
2002-06-22  Jean-Claude Wippler <jcw@equi4.com>
	* mac/pkgIndex_mac.tcl:
	* library/pkgIndex.tcl:
	* library/mk4vfs.in: fix recursive file deletion, bump to 1.5

2002-05-29  Jean-Claude Wippler <jcw@equi4.com>
	* Makefile.in: moved the definition of $(OBJEXT) up so the
	definition of vfs_OBJECTS works with more make's

2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/webdavvfs.tcl: v. early implementation of a webdav
	vfs.  (Note: this and the 'http' vfs need lots of work --
	please help out!).  This requires the '2.6' version of the http
	package which is distributed with tclvfs.
	
2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: newer version from tclkit.

2002-05-03  Vince Darley <vincentdarley@sourceforge.net>
	* tests/*: more test improvements, and new file vfsArchive.test
	which will test the running of the tests inside an archive. 
	This requires recursive invocation of the 'tcltest' package,