@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.3 2002/09/26 02:12:47 hobbs Exp $
+# RCS: @(#) $Id: configure.in,v 1.4 2002/10/15 18:56:31 hobbs Exp $
 
 #--------------------------------------------------------------------
 # This configure.in is based on the Tcl Extension Architecture (TEA)
@@ -87,13 +87,6 @@ TEA_ENABLE_SHARED
 TEA_CONFIG_CFLAGS
 
 TEA_ENABLE_SYMBOLS
-
-if test "${SHARED_BUILD}" = "1" ; then
-    CFLAGS='${CFLAGS_DEFAULT} ${CFLAGS_WARNING} ${SHLIB_CFLAGS}'
-else
-    CFLAGS='${CFLAGS_DEFAULT} ${CFLAGS_WARNING}'
-fi
-AC_SUBST(SHARED_BUILD)
 
 AC_DEFINE(USE_TCL_STUBS)
 
